slurm_output/hostname_48609991.out
  File "fast_weights_arnaud.py", line 292
    print('Datahelper: ',time.time()-start,' seconds')_
                                                      ^
SyntaxError: invalid syntax
